# still-systems-template

./: .gitignore  README.md  nexus-template.yaml  pyproject.toml
.github/: GUIDE.md  ISSUE_TEMPLATE.md  labeler.yml
.github/workflows/: ci.yml  labeler.yml  release.yml  stale.yml
src/{{.Identifier}}/: __init__.py
tests/: test_init.py
